# plonky2

./: Cargo.toml  README.md
ecdsa/: Cargo.toml
plonky2/: Cargo.toml
plonky2/examples/: square_root.rs
plonky2/src/fri/: oracle.rs
plonky2/src/gadgets/: arithmetic.rs  arithmetic_extension.rs  range_check.rs  split_base.rs  split_join.rs
plonky2/src/gates/: base_sum.rs  coset_interpolation.rs  exponentiation.rs  poseidon.rs  random_access.rs  reducing.rs  reducing_extension.rs
plonky2/src/iop/: generator.rs
plonky2/src/plonk/: circuit_builder.rs  circuit_data.rs
plonky2/src/recursion/: dummy_circuit.rs
plonky2/src/util/serialization/: gate_serialization.rs  generator_serialization.rs
plonky2_crypto/: Cargo.toml
plonky2_crypto/src/: lib.rs
plonky2_crypto/src/hash/: keccak256.rs  sha256.rs  sha256_merkle.rs  types.rs
plonky2_ecdsa/: Cargo.toml
plonky2_u32/: Cargo.toml
