[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
plonky2_maybe_rayon = { version = "0.1.1", default-features = false }
num = { version = "0.4.0", default-features = false }
#plonky2 = { git = "https://github.com/staaason/plonky2.git" }
#plonky2_u32 = { git = "https://github.com/staaason/plonky2-u32.git", default-features = false }
plonky2 = { path = "../plonky2"}
plonky2_u32 = { path = "../plonky2_u32", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
#plonky2 = { git = "https://github.com/staaason/plonky2.git", default-features = false, features = ["gate_testing"] }
plonky2 = { path = "../plonky2", default-features = false, features = ["gate_testing"] }
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
